Fix the overflow with white space right side - hero responsive.sass .scroll-responsive right: -5% to 0.

--- a/src/app/content/hero/styles/_responsive.sass
+++ b/src/app/content/hero/styles/_responsive.sass
@@ -77,7 +77,7 @@
           .scroll-container
             .scroll-responsive
               bottom: 8.5%
-              right: -5%
+              right: 0%
 
           .header-alignement
             .header-txt-container
